# Ratio

./: CMakeLists.txt  README.md
LibRationel/include/: ratio.hpp
LibRationnel/: CMakeLists.txt  main.cpp
LibRationnel/include/: ratio.hpp
LibRationnel/src/: ratio.cpp  ratioApp.cpp  ratioApps.cpp  ratioComparison.cpp  ratioMethods.cpp  ratioOperators.cpp
code/: CMakeLists.txt
code/src/: main.cpp
